# bayesicUtilities

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  index.cpp  index.hpp  random.cpp  random.hpp  utilities.cpp  utilities.hpp
include/: index.hpp  random.hpp  utilities.hpp
src/: index.cpp  random.cpp  utilities.cpp
tests/: testIdx.txt  testIdxWrong.txt  tests.cpp
